--- a/client/src/SearchBar.css
+++ b/client/src/SearchBar.css
@@ -1,28 +1,25 @@
-.input-wrapper {
-  width: 100%;
-  height: 2rem;
-  border: none;
-  border-radius: 10px;
-  padding: 0 15px;
-  /* box-shadow: 0px 0px 8px #ddd; */
-  /* background-color: white; */
-  display: flex;
-  align-items: center;
+.container-input {
+  position: relative;
 }
 
-input {
-  background-color: transparent;
-  border: none;
-  height: 100%;
-  font-size: 1.25rem;
-  width: 100%;
-  margin-left: 5px;
-}
-
-input:focus {
+.input {
+  width: 200px;
+  padding: 10px 0px 10px 40px;
+  border-radius: 9999px;
+  border: solid 1px #333;
+  transition: all .2s ease-in-out;
   outline: none;
+  opacity: 0.8;
 }
 
-#search-icon {
-  color: royalblue;
+.container-input svg {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translate(0, -50%);
+}
+
+.input:focus {
+  opacity: 1;
+  width: 250px;
 }
