--- a/client/src/SearchResultsList.css
+++ b/client/src/SearchResultsList.css
@@ -1,5 +1,5 @@
 .results-list {
-  width: 100%;
+  /* width: 100%;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -7,5 +7,13 @@
   border-radius: 10px;
   margin-top: 1rem;
   max-height: 300px;
-  overflow-y: auto;
+  overflow-y: auto; */
+  width: 250px;
+  position: absolute;
+  max-height: 200px;
+  top:65px;
+  overflow-y: scroll;
+  z-index: 1;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
 }
